--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,9 +2,11 @@ version: 2
 jobs:
   build:
     docker:
-      - image: debian:stretch
+      - image: docker:17.09.1-ce
     steps:
       - checkout
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
           name: Prepare QEMU
           command: docker run --rm --privileged multiarch/qemu-user-static:register --reset
