--- a/Dockerfile-rpi
+++ b/Dockerfile-rpi
@@ -25,16 +25,18 @@ RUN mkdir -p /opt/pytivo/lucasnz
 RUN tar -xvf pytivo.tar.gz -C /opt/pytivo/lucasnz --strip-components=1
 
 # Install ffmpeg to /usr/bin/ (pyTivo will be able to find this automatically)
-RUN apt-get -q update
-RUN apt-get install -qy ffmpeg
+RUN apt-get -q update; \
+    apt-get install -qy build-essential; \
+    apt-get build-dep -qy ffmpeg; \
+    apt-get source -qy ffmpeg; ls -Al ;\
+    cd ffmpeg; dpkg-buildpackage -us -uc 
 
 # Compile tivodecode and tdcat, install to /usr/local/bin/ (pyTivo will be able to find this automatically)
-RUN apt-get install -qy build-essential
-RUN wget http://sourceforge.net/projects/tivodecode/files/tivodecode/0.2pre4/tivodecode-0.2pre4.tar.gz
-RUN tar xvfz tivodecode-0.2pre4.tar.gz -C /opt/
-RUN cd /opt/tivodecode-0.2pre4;./configure
-RUN cd /opt/tivodecode-0.2pre4;make
-RUN cd /opt/tivodecode-0.2pre4;make install
+
+RUN wget http://sourceforge.net/projects/tivodecode/files/tivodecode/0.2pre4/tivodecode-0.2pre4.tar.gz \
+    tar xvfz tivodecode-0.2pre4.tar.gz -C /opt/ ; \
+    cd /opt/tivodecode-0.2pre4;./configure ; \
+    make ;make install
 
 VOLUME /config
 VOLUME /media
