--- a/Dockerfile-rpi
+++ b/Dockerfile-rpi
@@ -14,7 +14,7 @@ RUN usermod -u 99 nobody
 RUN usermod -g 100 nobody
 
 #RUN add-apt-repository ppa:jon-severinsson/ffmpeg
-RUN apt-get -q update; apt-get install -qy build-essential git subversion; 
+RUN apt-get -q update; apt-get install -qy build-essential git subversion wget python; 
 
 # Install ffmpeg to /usr/bin/ (pyTivo will be able to find this automatically)
 
@@ -29,7 +29,6 @@ RUN wget http://sourceforge.net/projects/tivodecode/files/tivodecode/0.2pre4/tiv
     make ;make install
 
 # Install pyTivo
-RUN apt-get install -qy wget python
 # wget the 2014-07-06 release
 #RUN wget http://repo.or.cz/w/pyTivo/wmcbrine/lucasnz.git/snapshot/2f1f223bd62e30a4774828a3c811b1194e18b703.tar.gz
 RUN wget -O pytivo.tar.gz http://repo.or.cz/w/pyTivo/wmcbrine/lucasnz.git/snapshot/bbddd6221fecbfc9172f8c78f64bfe69d02cee8a.tar.gz
