--- a/Dockerfile-rpi
+++ b/Dockerfile-rpi
@@ -23,7 +23,7 @@ RUN apt-get install libav-tools
 # Compile tivodecode and tdcat, install to /usr/local/bin/ (pyTivo will be able to find this automatically)
 
 RUN wget http://sourceforge.net/projects/tivodecode/files/tivodecode/0.2pre4/tivodecode-0.2pre4.tar.gz; \
-     | tar xvzf tivodecode-0.2pre4.tar.gz  -C /opt/ ; \
+    tar xvzf tivodecode-0.2pre4.tar.gz  -C /opt/ ; \
     cd /opt/tivodecode-0.2pre4;./configure ; \
     make ; make install
 
